--- a/src/main.scss
+++ b/src/main.scss
@@ -8,3 +8,5 @@
 @import './styles/service';
 @import './styles/project';
 @import './styles/team';
+@import './styles/subscribe';
+@import './styles/footer';
