--- a/src/styles/_team.scss
+++ b/src/styles/_team.scss
@@ -13,6 +13,9 @@
   &__title {
     font: var(--title);
     margin-bottom: 30px;
+    @include tablet {
+      font-size: 32px;
+    }
   }
 
   &__desc {
@@ -20,11 +23,18 @@
     margin-bottom: 40px;
     text-align: center;
     width: 480px;
+    @include tablet {
+      font-size: 14px;
+    }
   }
 
   &__card {
     display: flex;
     gap: 30px;
+    @include tablet {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 }
 .team-item {
@@ -43,11 +53,10 @@
     rgba(255, 255, 255, 0.02) 104.89%
   );
   box-shadow: 0px 22px 18px 0px rgba(0, 0, 0, 0.05);
-&__icon{
+  &__icon {
     margin-bottom: 10px;
-    
-}
-  &__info{
+  }
+  &__info {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,7 +77,7 @@
 
   &__media {
     display: flex;
-    gap:12px;
+    gap: 12px;
   }
 
   &__img {
