--- a/src/styles/_virtual.scss
+++ b/src/styles/_virtual.scss
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @include tablet {
+    flex-direction: column;
+    margin-bottom: 100px;
+  }
 
   &__info {
     display: flex;
@@ -23,6 +27,10 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 29px;
+    @include tablet {
+      width: 444px;
+      font-size: 44px;
+    }
   }
 
   &__desc {
@@ -33,6 +41,10 @@
     font-weight: 500;
     line-height: 30px;
     margin-bottom: 31px;
+    @include tablet {
+      width: 434px;
+      font-size: 12px;
+    }
   }
   &__parts {
     display: flex;
@@ -44,6 +56,10 @@
     font-size: 16px;
     font-weight: 500;
     padding: 20px 40px;
+    @include tablet {
+      font-size: 16px;
+      padding: 15px 30px;
+    }
   }
 
   &__join {
@@ -60,5 +76,8 @@
 
   &__img {
     flex-shrink: 0;
+    @include tablet {
+      display: none;
+    }
   }
 }
