--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -35,6 +35,9 @@
     @include tablet {
       font-size: 32px;
     }
+    @include mobile{
+      font-size: 16px;
+    }
   }
 
   &__desc {
@@ -42,10 +45,16 @@
     @include tablet {
       font-size: 14px;
     }
+    @include mobile{
+      font-size: 10px;
+    }
   }
 
   &__btn {
     color: var(--white);
     padding: 7px 14px;
+    @include mobile{
+      font-size: 10px;
+    }
   }
 }
