--- a/src/styles/_team.scss
+++ b/src/styles/_team.scss
@@ -16,6 +16,9 @@
     @include tablet {
       font-size: 32px;
     }
+    @include mobile{
+      font-size: 16px;
+    }
   }
 
   &__desc {
@@ -25,6 +28,10 @@
     width: 480px;
     @include tablet {
       font-size: 14px;
+    }
+    @include mobile{
+      width: 280px;
+      font-size: 10px;
     }
   }
 
@@ -66,6 +73,9 @@
   &__name {
     font-size: 28px;
     font-weight: 500;
+    @include mobile{
+      font-size: 16px;
+    }
   }
 
   &__pos {
@@ -73,6 +83,9 @@
     font-weight: 400;
     letter-spacing: 0.48px;
     text-transform: uppercase;
+    @include mobile{
+      font-size: 10px;
+    }
   }
 
   &__media {
