--- a/src/styles/_subscribe.scss
+++ b/src/styles/_subscribe.scss
@@ -40,7 +40,8 @@
       margin-bottom: 10px;
     }
     @include mobile {
-      font-size: 10px;
+      margin-top: 10px;
+      font-size: 9px;
     }
   }
 
@@ -74,6 +75,7 @@
 
       @include mobile {
         font-size: 11px;
+        padding-left: 10px;
       }
     }
     @include tablet {
@@ -81,7 +83,7 @@
     }
     @include mobile {
       font-size: 12px;
-      width: 250px;
+      width: 300px;
       padding: 10px;
     }
   }
