--- a/src/styles/_team.scss
+++ b/src/styles/_team.scss
@@ -16,7 +16,7 @@
     @include tablet {
       font-size: 32px;
     }
-    @include mobile{
+    @include mobile {
       font-size: 16px;
     }
   }
@@ -29,7 +29,7 @@
     @include tablet {
       font-size: 14px;
     }
-    @include mobile{
+    @include mobile {
       width: 280px;
       font-size: 10px;
     }
@@ -39,8 +39,12 @@
     display: flex;
     gap: 30px;
     @include tablet {
-      flex-wrap: wrap;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+    @include mobile {
+      display: grid;
+      grid-template-columns: 1fr;
     }
   }
 }
@@ -73,7 +77,7 @@
   &__name {
     font-size: 28px;
     font-weight: 500;
-    @include mobile{
+    @include mobile {
       font-size: 16px;
     }
   }
@@ -83,9 +87,9 @@
     font-weight: 400;
     letter-spacing: 0.48px;
     text-transform: uppercase;
-    @include mobile{
+    @include mobile {
       font-size: 10px;
-      margin-bottom: 10px
+      margin-bottom: 10px;
     }
   }
 
