--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -5,6 +5,12 @@
 
   --primary-color: #595085;
 
+  --Footer-Gradient:rgba(255, 255, 255, 0.80);
+
+  --btn-color:linear-gradient(90deg, #2563eb 0.36%, #d946ef 201.02%);
+
+
+
   //adaptive width
 
   $desktop-small: 1200px;
