--- a/src/styles/_team.scss
+++ b/src/styles/_team.scss
@@ -38,6 +38,7 @@
   &__card {
     display: flex;
     gap: 30px;
+    cursor: pointer;
     @include tablet {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -64,6 +65,20 @@
     rgba(255, 255, 255, 0.02) 104.89%
   );
   box-shadow: 0px 22px 18px 0px rgba(0, 0, 0, 0.05);
+  transition: 0.3s all ease-in-out;
+ 
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 10px 15px rgba(25, 199, 243, 0.415);
+   
+  }
+  @include tablet{
+    &:hover{
+      pointer-events: none;
+    }
+   }
+  
+
   &__icon {
     margin-bottom: 10px;
   }
@@ -98,6 +113,5 @@
     gap: 12px;
   }
 
-  &__img {
-  }
+  
 }
